// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitemapSection component renders correctly 1`] = `
<div>
  <div
    class="Section-root-1"
  >
    <div
      class="Container-root-9"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-8 Typography-root-11 Typography-underline-13 MuiTypography-h2"
          data-testid="typography"
        >
          Main
        </h2>
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-root-19"
          >
            <div
              class="MasonryGrid-column-20"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography-root-11 MuiTypography-h4 MuiTypography-gutterBottom"
                  data-testid="typography"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography-root-11 MuiTypography-h6 MuiTypography-gutterBottom"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-21 Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          +44 (0) 1234567890
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-column-20"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography-root-11 MuiTypography-h4 MuiTypography-gutterBottom"
                  data-testid="typography"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography-root-11 MuiTypography-h6 MuiTypography-gutterBottom"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-21 Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          Our story
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly 2 levels deep 1`] = `
<div>
  <div
    class="Section-root-27"
  >
    <div
      class="Container-root-35"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-34 Typography-root-37 Typography-underline-39 MuiTypography-h2"
          data-testid="typography"
        >
          Main
        </h2>
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-root-45"
          >
            <div
              class="MasonryGrid-column-46"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography-root-37 MuiTypography-h4 MuiTypography-gutterBottom"
                  data-testid="typography"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography-root-37 MuiTypography-h6 MuiTypography-gutterBottom"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-47 Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          +44 (0) 1234567890
                        </span>
                      </a>
                    </h6>
                    <div>
                      <h5
                        class="MuiTypography-root Typography-root-37 MuiTypography-h5 MuiTypography-gutterBottom"
                        data-testid="typography"
                      >
                        About BMI 2
                      </h5>
                      <div
                        class="SitemapBlock SitemapBlock--child"
                      >
                        <div>
                          <h6
                            class="MuiTypography-root Typography-root-37 MuiTypography-h6 MuiTypography-gutterBottom"
                            data-testid="typography"
                          >
                            <a
                              class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-47 Anchorlink MuiTypography-colorPrimary"
                              type="button"
                            >
                              <span>
                                Our story
                              </span>
                            </a>
                          </h6>
                          <div>
                            <h6
                              class="MuiTypography-root Typography-root-37 MuiTypography-h6 MuiTypography-gutterBottom"
                              data-testid="typography"
                            >
                              About BMI 2
                            </h6>
                            <div
                              class="SitemapBlock SitemapBlock--child"
                            >
                              <div>
                                <h6
                                  class="MuiTypography-root Typography-root-37 MuiTypography-h6 MuiTypography-gutterBottom"
                                  data-testid="typography"
                                >
                                  <a
                                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-47 Anchorlink MuiTypography-colorPrimary"
                                    type="button"
                                  >
                                    <span>
                                      Our story
                                    </span>
                                  </a>
                                </h6>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-column-46"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography-root-37 MuiTypography-h4 MuiTypography-gutterBottom"
                  data-testid="typography"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography-root-37 MuiTypography-h6 MuiTypography-gutterBottom"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-47 Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          Our story
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly if incomplete 1`] = `
<div>
  <div
    class="Section-root-79"
  >
    <div
      class="Container-root-87"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-86 Typography-root-89 Typography-underline-91 MuiTypography-h2"
          data-testid="typography"
        />
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-root-97"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
